# tolangc

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp
.github/workflows/: pr-check.yml  unit-test.yml
code/: ast_def.cpp
docs/tutorials/: 00-preface.md  01-lexical-analysis.md  02-abstract-syntax-tree.md  03-syntactic-analysis.md  04-symbol-table-and-type-system.md  05-intermediate-representation.md  06-semantic-analysis.md  07-ir-generation-1-llvm.md  07-ir-generation-2-quadruple.md  07-ir-generation-3-pcode.md  08-target-code-generation.md  09-code-optimization.md  10-appendix-1-env.md  10-appendix-2-develop.md  10-appendix.md  llvm代码结构说明.md  mips代码说明.md
include/: ast.h  error.h  lexer.h  parser.h  symbol_table.h  symtable.h  token.h  utils.h  visitor.h
include/asm/: AsmPrinter.h
include/ir/: IrForward.h  LlvmContext.h  Module.h  SlotTracker.h  Type.h
include/mips/: mips_forward.h  mips_inst.h  mips_manager.h  mips_reg.h  translator.h
include/pcode/: PcodeBlock.h  PcodeFunction.h  PcodeInstruction.h  PcodeInstructions.h  PcodeVisitor.h
libs/: CMakeLists.txt
libs/llvm/: CMakeLists.txt
libs/mips/: CMakeLists.txt
libs/pcode/: CMakeLists.txt
libs/tolang/: CMakeLists.txt
libs/tolang/include/tolang/: error.h  parser.h  symtable.h  token.h  utils.h  visitor.h
libs/tolang/src/: ast.cpp  lexer.cpp  parser.cpp  visitor.cpp
scripts/: build.sh  format.sh  llvm_run.sh  mips_run.sh  test.py
src/: ast.cpp  ast_def.h  error.cpp  lexer.cpp  parser.cpp  utils.cpp  visitor.cpp
src/asm/: AsmPrinter.cpp  (+3 more)
testcases/: add.output  add.tol  fibo.input  fibo.output  fibo.tol  func.tol  newton.input  newton.output  newton.tol  sum.tol
tests/: CMakeLists.txt  ir_test.cpp  test_ast.cpp  test_ir.cpp  test_lexer.cpp  test_llvm_ir.cpp  test_llvm_visitor.cpp  test_mips.cpp  test_parser.cpp  test_symbol_table.cpp  test_symtable.cpp  test_visitor.cpp  tests
(+121 files in other folders)
